python/testData/inspections/PyUnresolvedReferencesInspection/selfReference.py
<error descr="Unresolved reference 'selfReference'">selfReference</error>
